--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App </title>
     <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class='weather'>
-        <h1 style="font-weight: 500; padding-bottom: 15px;">Weather App</h1>
+        <h1 style="font-weight: 500; padding-bottom: 15px; color: #ffff00ef;">Weather <span>App</span></h1>
         <div class="search-bar">
             <input type="text" placeholder='Search' spellcheck="false"/>
-            <button><img src="search.png" alt="" /></button>
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <img src="clear.png" alt="" class='weather-icon' />
         <p class='temperature'>Temperature</p>
